syntax = "proto2";

package cloudprober.surfacer.prometheus;

option go_package = "github.com/google/cloudprober/surfacers/prometheus/proto";

message SurfacerConf {
  // How many metrics entries (EventMetrics) to buffer. Incoming metrics
  // processing is paused while serving data to prometheus. This buffer is to
  // make writes to prometheus surfacer non-blocking.
  // NOTE: This field is confusing for users and will be removed from the config
  // after v0.10.3.
  optional int64 metrics_buffer_size = 1 [default = 10000];

  // Whether to include timestamps in metrics. If enabled (default) each metric
  // string includes the metric timestamp as recorded in the EventMetric.
  // Prometheus associates the scraped values with this timestamp. If disabled,
  // i.e. timestamps are not exported, prometheus associates scraped values with
  // scrape timestamp.
  optional bool include_timestamp = 2 [default = true];

  // URL that prometheus scrapes metrics from.
  optional string metrics_url = 3 [default = "/metrics"];

  // Prefix to add to all metric names. For example setting this field to
  // "cloudprober_" will result in metrics with names:
  // cloudprober_total, cloudprober_success, cloudprober_latency, ..
  optional string metrics_prefix = 4;
}
